--- a/static/index.html
+++ b/static/index.html
@@ -29,6 +29,9 @@
             <button type="submit" class="btn btn-primary">Create VM</button>
         </form>
         <div id="result" class="mt-3"></div>
+        <p class="mt-3">
+            <a href="{{ url_for('logout') }}" class="btn btn-secondary">Logout</a>
+        </p>
     </div>
 
     <script>
